# cpp-utils

./: .gitignore  CMakeLists.txt
include/: type_utils.hpp
include/cpp_utils/: config.hpp
include/cpp_utils/math/: primes.hpp
include/cpp_utils/type/: type_name.hpp
src/: type_utils.cpp
src/type/: type_name.cpp
test/: CMakeLists.txt  test_type_utils.cpp
test/math/: test_primes.cpp
test/type/: test_type_utils.cpp
